vlib/v/checker/tests/assign_none.out
vlib/v/checker/tests/assign_none.vv:2:9: error: cannot assign a `none` value to a variable
    1 | fn main() {
    2 |     val := none
      |            ~~~~
    3 |     println(val)
    4 | }
