vlib/v/checker/tests/assign_none.vv
fn main() {
	val := none
	println(val)
}
